feat: se agregó el caso de cambiar los periodo-seguimiento de planes avalados y se cambió la ruta del endpoioint de habilitar_fechas
