# swagger/swagger.json
@@ -375,13 +375,13 @@
                 }
             }
         },
-        "/formulacion/habilitar_fechas_funcionamiento": {
+        "/formulacion/habilitar_fechas": {
             "post": {
                 "tags": [
                     "formulacion"
                 ],
-                "description": "Peticion POST para definir fechas en planes de acción de funcionamiento",
-                "operationId": "FormulacionController.DefinirFechasFuncionamiento",
+                "description": "Peticion POST para habilitar fechas en planes de acción de funcionamiento e inversión para los procesos de formulación y seguimiento",
+                "operationId": "FormulacionController.HabilitarFechas",
                 "parameters": [
                     {
                         "in": "body",
